
  * softwarecenter/view/widgets/spinner.py:
    - modify to allow updating spinner label text on the fly
  * software-center,
    softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/softwarepane.py:
    - defer loading the categories pane in the main view and display
      a spinner while it's loading, provides further startup time
      improvement

 -- Gary Lasker <gary.lasker@canonical.com>  Tue, 18 Jan 2011 12:11:18 -0500

software-center (3.1.10) natty; urgency=low

  [ Michael Vogt ]
  * include full AUTHORS info into the about dialog,
    based on the lp:~adnane002/software-center/fix.632770
    branch (LP: #632770)
  * data/ui/SoftwareCenter.ui:
    - add translator_credits (LP: #632770), thanks to 
      Adnane Belmadiaf 
  * merged lp:~aaronp/software-center/fix-699898, many thanks
    to Aaron Peachey (LP: #699898)

  [ Kiwinote ]
  * softwarecenter/app.py:
    - don't crash on pressing backspace in the history pane (LP: #696639)
  * softwarecenter/backend/aptd.py:
    - play nicely after cancelling policykit dialog
  * softwarecenter/db/application.py:
    - display correct version number for installed packages (LP: #695026)
  * softwarecenter/distro/*.py:
    - fix broken translations (LP: #703610)

  [ Gary Lasker ]
  * softwarecenter/models/appstore.py,
    softwarecenter/backend/aptd.py,
    softwarecenter/models/appstore.py,
    softwarecenter/view/appdetailsview_gtk.py,
    softwarecenter/view/appdetailsview_webkit.py,
    softwarecenter/view/appview.py:
    - restore progress bar feedback when installing/removing software
      from within the applist view (LP: #701589)
    - clean up unused code
  * softwarecenter/backend/aptd.py:
    - attach the aptdaemon progress-changed listener earlier in the
      transaction to allow for more instant progress feedback in the UI

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 17 Jan 2011 13:46:48 +0100

software-center (3.1.9) natty; urgency=low

  [ Gary Lasker ]